--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1,18 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Nixie+One&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap');
 
-.nixie-one{ font-family: 'Nixie One', cursive; }
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
 
-.ibarra-real-nova{ font-family: 'Ibarra Real Nova', serif; }
+.font-inter { font-family: 'Inter', sans-serif; }
 
-.playfair-display{ font-family: 'Playfair Display', serif; }
-
-.quicksand{ font-family: 'Quicksand', sans-serif; }
-
-.dancing-script{ font-family: 'Dancing Script', cursive; }
-
-.open-sans{ font-family: 'Open Sans', sans-serif; }
+.color-primary { background-color: #19323C!important; }
